Maven javadoc plugin

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,22 @@
         <netbeans.hint.license>apache20</netbeans.hint.license>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
